--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ certificate.*
 package-lock.json
 dist
 .eslintrc.json
+2021/Firebase_pong/config/config.js
+2021/Firebase_pong/config.zip
+2021/config.js
+2021/Firebase_pong/config/config.js
+2021/Firebase_pong/config/config.js
+2021/template/config/config.js
